--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "version": "npm version && chmod +x update-version.sh && ./update-version.sh",
-    "verify": "openapi-linter lint ./public/schema.json -f json -e error"
+    "version": "npm version && chmod +x update-version.sh && ./update-version.sh"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -20,7 +19,6 @@
     "swagger-ui-react": "^5.6.2"
   },
   "devDependencies": {
-    "@superfaceai/openapi-linter": "^0.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
