--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -84,3 +84,20 @@ jobs:
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.API_SPEC_PAT_TOKEN }} \
           --data '{"event_type": "trigger-pre-release", "client_payload": { "pr": "${{ github.event.number }}", "version": "${{ needs.create-pre-release.outputs.version }}" }}'
+      - name: PR Comment
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const { repo: { owner, repo } } = context;
+
+            try {
+              await github.rest.issues.createComment({
+                owner: owner,
+                repo: repo,
+                issue_number: ${{ github.event.number }},
+                body: 'Package Version: ${{ needs.create-pre-release.outputs.version }}',
+              });
+            } catch (error) {
+              console.error(error);
+            }
