--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy on Main Branch
 on:
   push:
     branches:
-      - main
+      - test
 
 jobs:
   publish-gh-pages:
@@ -14,7 +14,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: '14'
       - name: Install dependencies
         run: rm -rf node_modules && rm -rf dist && npm install
       - name: Build
@@ -78,7 +78,7 @@ jobs:
           -u ${{ secrets.API_SPEC_PAT_TOKEN }} \
           --data '{"event_type": "trigger_workflow", "client_payload": { "version": "${{ needs.generate-release.outputs.version }}" }}'
       - uses: actions/checkout@v3
-  
+
   publish-to-swagger-hub:
     runs-on: ubuntu-latest
     steps:
