--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -2,8 +2,6 @@ name: Pre-Release
 
 on:
   pull_request:
-    branches-ignore:
-      - main
     types:
       - opened
       - reopened
@@ -83,8 +81,8 @@ jobs:
           curl -X POST https://api.github.com/repos/Chillibean/accounts-api-client-sdk/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.API_SPEC_PAT_TOKEN }} \
-          --data '{"event_type": "trigger-pre-release", "client_payload": { "pr": "${{ github.event.number }}", "version": "${{ needs.create-pre-release.outputs.version }}" }}'
-      - name: PR Comment
+          --data '{"event_type": "trigger-pre-release", "client_payload": { "version": "${{ needs.create-pre-release.outputs.version }}" }}'
+      - name: Pull Request Comment
         uses: actions/github-script@v7
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
@@ -96,7 +94,7 @@ jobs:
                 owner: owner,
                 repo: repo,
                 issue_number: ${{ github.event.number }},
-                body: 'Package Version: ${{ needs.create-pre-release.outputs.version }}',
+                body: 'Version: ${{ needs.create-pre-release.outputs.version }}',
               });
             } catch (error) {
               console.error(error);
