--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           curl -X POST https://api.github.com/repos/Chillibean/accounts-api-client-sdk/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.API_SPEC_PAT_TOKEN }} \
+          -u ${{ secrets.GITHUB_TOKEN }} \
           --data '{"event_type": "trigger-pre-release", "client_payload": { "version": "${{ needs.create-pre-release.outputs.version }}" }}'
       - name: Pull Request Comment
         uses: actions/github-script@v7
