--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -81,6 +81,7 @@ jobs:
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.GITHUB_TOKEN }} \
           --data '{"event_type": "trigger-pre-release", "client_payload": { "version": "${{ needs.create-pre-release.outputs.version }}" }}'
+          --fail
       - name: Pull Request Comment
         uses: actions/github-script@v7
         with:
