--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -80,7 +80,7 @@ jobs:
           curl -X POST https://api.github.com/repos/Chillibean/accounts-api-client-sdk/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.GITHUB_TOKEN }} \
-          --data '{"event_type": "trigger-pre-release", "client_payload": { "version": "${{ needs.create-pre-release.outputs.version }}" }}'
+          --data '{"event_type": "trigger-pre-release", "client_payload": { "version": "${{ needs.create-pre-release.outputs.version }}" }}' \
           --fail
       - name: Pull Request Comment
         uses: actions/github-script@v7
