--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -29,73 +29,18 @@ jobs:
             const { repo: { owner, repo }, sha } = context;
 
             try {
-              const release = await github.rest.repos.createRelease({
+              const releases = await github.rest.repos.listReleases({
                 owner: owner,
                 repo: repo,
-                tag_name: '${{ steps.version.outputs.value }}',
-                target_commitish: sha,
-                name: '${{ steps.version.outputs.value }}',
-                body: 'This is a pre-release for development purposes only. Do not use it for production.',
-                draft: true,
-                prerelease: true,
               });
+              console.log('All releases:', releases.data);
 
-              await github.rest.repos.uploadReleaseAsset({
-                owner: owner,
-                repo: repo,
-                release_id: release.data.id,
-                name: 'schema.json',
-                data: await fs.readFile('./public/fullSchema.json'),
-              });
+              const preReleases = releases.data.filter((release) => release.name && release.name.includes('3.0.0' && release.prerelease));
 
-              await github.rest.repos.updateRelease({
-                owner: owner,
-                repo: repo,
-                release_id: release.data.id,
-                draft: false,
-              });
+              console.log('Releases found:', preReleases.map((release) => release.name));
             } catch (error) {
               console.error(error);
-
-              await github.rest.repos.deleteRelease({
-                owner: owner,
-                repo: repo,
-                release_id: release.data.id,
-              });
-
-              core.setFailed('Failed to create a pre-release');
+              core.setFailed('Failed to remove pre-releases');
             }
     outputs:
       version: ${{ steps.version.outputs.value }}
-
-  trigger-client-sdk-package-generation:
-    name: Trigger client SDK package generation
-    runs-on: ubuntu-latest
-    needs: create-pre-release
-    if: ${{ !github.event.pull_request.draft }}
-    steps:
-      - name: Trigger Workflow
-        run: |
-          set -e
-          curl -X POST https://api.github.com/repos/Chillibean/accounts-api-client-sdk/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.API_SPEC_PAT_TOKEN }} \
-          --data '{"event_type": "trigger-pre-release", "client_payload": { "version": "${{ needs.create-pre-release.outputs.version }}" }}' \
-          --fail
-      - name: Pull Request Comment
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { repo: { owner, repo } } = context;
-
-            try {
-              await github.rest.issues.createComment({
-                owner: owner,
-                repo: repo,
-                issue_number: ${{ github.event.number }},
-                body: 'Version: ${{ needs.create-pre-release.outputs.version }}',
-              });
-            } catch (error) {
-              console.error(error);
-            }
