--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -34,9 +34,9 @@ jobs:
                 repo: repo,
                 per_page: 100,
               });
-              console.log('All releases:', releases.data.length);
+              console.log('All releases:', releases.length);
 
-              const preReleases = releases.data.filter((release) => release.name && release.name.includes('3.0.0') && release.prerelease);
+              const preReleases = releases.filter((release) => release.name && release.name.includes('3.0.0') && release.prerelease);
 
               console.log('Releases found:', preReleases.map((release) => release.name));
             } catch (error) {
