--- a/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_arms.json
+++ b/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_arms.json
@@ -1,6 +1,6 @@
 {
   "get": {
-    "summary": "Get the study arms of a protocol",
+    "summary": "Get the study arms of a trial configuration",
     "description": "Get account form template",
     "operationId": "getStudyArms",
     "tags": [
@@ -24,14 +24,14 @@
         "description": "The account id"
       },
       {
-        "name": "study_protocol_id",
+        "name": "trial_configuration_id",
         "in": "path",
         "required": true,
         "schema": {
           "type": "string",
           "example": "1"
         },
-        "description": "The study protocol id"
+        "description": "The trial configuration id"
       }
     ],
     "responses": {
