--- a/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_procedure_definitions.json
+++ b/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_procedure_definitions.json
@@ -1,7 +1,7 @@
 {
   "get": {
-    "summary": "Get the study procedure definitions of a protocol",
-    "description": "Get the study procedure definitions of a protocol",
+    "summary": "Get the study procedure definitions of a trial configuration",
+    "description": "Get the study procedure definitions of a trial configuration",
     "operationId": "getStudyProcedureDefinitions",
     "tags": [
       "Protocols"
@@ -24,14 +24,14 @@
         "description": "The account id"
       },
       {
-        "name": "study_protocol_id",
+        "name": "trial_configuration_id",
         "in": "path",
         "required": true,
         "schema": {
           "type": "string",
           "example": "1"
         },
-        "description": "The study protocol id"
+        "description": "The trial configuration id"
       }
     ],
     "responses": {
