--- a/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_site_reporting_export.json
+++ b/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_site_reporting_export.json
@@ -2,9 +2,9 @@
   "get": {
     "summary": "Get report export for the trial configuration",
     "description": "Get trial configurations reporting export",
-    "operationId": "getProtocolsReportingExport",
+    "operationId": "getTrialConfigurationsReportingExport",
     "tags": [
-      "Protocols"
+      "Trial Configurations"
     ],
     "security": [
       {
