--- a/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_arms.json
+++ b/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_arms.json
@@ -4,7 +4,7 @@
     "description": "Get account form template",
     "operationId": "getStudyArms",
     "tags": [
-      "Protocols"
+      "Trial Configurations"
     ],
     "security": [
       {
