--- a/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_procedure_definitions.json
+++ b/public/refs/paths/accounts_{account_id}_trial_configurations_{trial_configuration_id}_study_procedure_definitions.json
@@ -4,7 +4,7 @@
     "description": "Get the study procedure definitions of a trial configuration",
     "operationId": "getStudyProcedureDefinitions",
     "tags": [
-      "Protocols"
+      "Trial Configurations"
     ],
     "security": [
       {
