--- a/public/refs/components/schemas/TrialConfiguration.json
+++ b/public/refs/components/schemas/TrialConfiguration.json
@@ -10,7 +10,7 @@
     "name": {
       "type": "string",
       "description": "The name of the trial configuration",
-      "example": "Protocol v1"
+      "example": "Trial Configuration v1"
     },
     "number_of_study_procedures": {
       "type": "number",
