--- a/public/refs/paths/accounts_{account_id}_trial_configurations.json
+++ b/public/refs/paths/accounts_{account_id}_trial_configurations.json
@@ -1,10 +1,10 @@
 {
   "get": {
-    "summary": "Get report for the protocol",
-    "description": "Get protocols reporting",
-    "operationId": "getProtocolsReporting",
+    "summary": "Get trial configurations",
+    "description": "Get trial configurations",
+    "operationId": "getTrialConfigurations",
     "tags": [
-      "Protocols"
+      "Trial Configurations"
     ],
     "security": [
       {
@@ -22,26 +22,6 @@
           "example": "1"
         },
         "description": "The account id"
-      },
-      {
-        "name": "study_protocol_id",
-        "in": "path",
-        "required": true,
-        "schema": {
-          "type": "string",
-          "example": "1"
-        },
-        "description": "The study protocol id"
-      },
-      {
-        "name": "page",
-        "in": "query",
-        "description": "The page number",
-        "required": false,
-        "schema": {
-          "type": "integer",
-          "example": 1
-        }
       }
     ],
     "responses": {
@@ -50,7 +30,10 @@
         "content": {
           "application/json": {
             "schema": {
-              "$ref": "../components/schemas/ProtocolsReporting.json"
+              "type": "array",
+              "items": {
+                "$ref": "../components/schemas/TrialConfiguration.json"
+              }
             }
           }
         }
